
TIP: E.g. release 0.5.6 was the 6th release in iteration number 5.

NOTE: References to user stories are in the form Iteration/Story-Number.

////

[[v0.0.0]]
== [0.0.0] -- 2018-00-00

{url-cl}<prev>++...++main[Full Changelog]

.Added

.Changed

.Deprecated

.Removed

.Fixed

.Security

////


[[unreleased]]
== [unreleased]

{url-cl}2.1.1++...++main[Full Changelog]

.Added

////
.Changed

.Deprecated

.Removed

.Fixed

.Security
////

[[v2.1.1]]
== {url-tree}2.1.1[2.1.1] -- 2025-01-25

.Changed
- Bumped spring-boot, wicket, jOOQ, KRis, lombok,
  mockk, equalsverifier,
  gradle

- Removed debug logs for complex search


[[v2.1.0]]
== {url-tree}2.1.0[2.1.0] -- 2025-01-08

.Changed
- Bumped kotlin, coroutines, wicket-bootstrap, wicketstuff,
  mockk, equalsverifier,
  gradle


[[v2.0.11]]
== {url-tree}2.0.11[2.0.11] -- 2024-12-19

.Changed
- Bumped spring-boot, spring-dependency-management, wicket, jOOQ, KRis, guava


[[v2.0.10]]
== {url-tree}2.0.10[2.0.10] -- 2024-12-07

.Changed
- Bumped spring-boot, spring-cloud-starter-openfeign, spring-boot-admin-starter-client,
  lombok, jooq-gradle-plugin, reckon, sonarqube-plugin,
  equalsverifier


[[v2.0.9]]
== {url-tree}2.0.9[2.0.9] -- 2024-11-15

.Fixed
- reverted gradle update due to issue on server


[[v2.0.8]]
== {url-tree}2.0.8[2.0.8] -- 2024-11-15

.Changed
- Bumped spring-boot-admin-starter-client,
  gradle, jooq-gradle-plugin,
  equalsverifier

.Fixed
- avoid a null poiner exception



[[v2.0.7]]
== {url-tree}2.0.7[2.0.7] -- 2024-10-31

.Changed

.Fixed
- avoid a null poiner exception


[[v2.0.6]]
== {url-tree}2.0.6[2.0.6] -- 2024-10-29

.Changed
- bumped jooq-gradle-plugin

.Fixed
- {url-issues}727[#727] Open Help/Changelog in new browser window


[[v2.0.5]]
== {url-tree}2.0.5[2.0.5] -- 2024-10-24

.Changed
- bumped spring-boot, spring-boot-admin-starter-client,
  wicket, wicketbootstrap, wicketstuff,
  feign, guava, jasperreports,
  gradle, jooq-gradle-plugin, jaxb-gradle-plugin, lombok-gradle-plugin,