@@ -15,6 +15,7 @@
 	<field name="populationParticipants" class="java.lang.String"/>
 	<field name="exposureAssessment" class="java.lang.String"/>
 	<field name="resultExposureRange" class="java.lang.String"/>
+	<field name="methodStatistics" class="java.lang.String"/>
 	<field name="methodConfounders" class="java.lang.String"/>
 	<field name="resultEffectEstimate" class="java.lang.String"/>
 	<field name="conclusion" class="java.lang.String"/>
@@ -28,6 +29,7 @@
 	<field name="populationParticipantsLabel" class="java.lang.String"/>
 	<field name="exposureAssessmentLabel" class="java.lang.String"/>
 	<field name="resultExposureRangeLabel" class="java.lang.String"/>
+	<field name="methodStatisticsLabel" class="java.lang.String"/>
 	<field name="methodConfoundersLabel" class="java.lang.String"/>
 	<field name="resultEffectEstimateLabel" class="java.lang.String"/>
 	<field name="conclusionLabel" class="java.lang.String"/>
@@ -51,7 +53,7 @@
 			<property name="local_mesure_unitheight" value="pixel"/>
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="0" y="0" width="50" height="15" isPrintWhenDetailOverflows="true" uuid="96ec2b98-c9e2-4d18-a210-d05bc0fba9d2">
+				<reportElement x="0" y="0" width="40" height="15" isPrintWhenDetailOverflows="true" uuid="96ec2b98-c9e2-4d18-a210-d05bc0fba9d2">
 					<property name="local_mesure_unitheight" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
@@ -61,7 +63,7 @@
 				<textFieldExpression><![CDATA[$F{numberLabel}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="53" y="0" width="67" height="15" isPrintWhenDetailOverflows="true" uuid="a3fc231a-ac6b-4334-ba04-73fcdeea4ca6">
+				<reportElement x="41" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="a3fc231a-ac6b-4334-ba04-73fcdeea4ca6">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -74,7 +76,7 @@
 				<textFieldExpression><![CDATA[$F{authorYearLabel}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="120" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="39440d76-e068-4980-a1a6-b02dcb1c481d">
+				<reportElement x="101" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="39440d76-e068-4980-a1a6-b02dcb1c481d">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitwidth" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -85,7 +87,7 @@
 				<textFieldExpression><![CDATA[$F{populationPlaceLabel}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="180" y="0" width="81" height="15" isPrintWhenDetailOverflows="true" uuid="e42510f5-9f62-4c82-82e7-eafdcb8abac0">
+				<reportElement x="161" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="e42510f5-9f62-4c82-82e7-eafdcb8abac0">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -98,7 +100,7 @@
 				<textFieldExpression><![CDATA[$F{methodOutcomeLabel}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="261" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="0f627783-deb6-4866-9719-6fb3bfc8ccd3">
+				<reportElement x="221" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="0f627783-deb6-4866-9719-6fb3bfc8ccd3">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -111,7 +113,7 @@
 				<textFieldExpression><![CDATA[$F{exposurePollutantLabel}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="321" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="11489e1d-f85a-41f4-9d9c-5c88b99f9a23">
+				<reportElement x="281" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="11489e1d-f85a-41f4-9d9c-5c88b99f9a23">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -124,7 +126,7 @@
 				<textFieldExpression><![CDATA[$F{methodStudyDesignLabel}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="381" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="ca3781fd-6bac-43df-ad07-2338adc40d8d">
+				<reportElement x="341" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="ca3781fd-6bac-43df-ad07-2338adc40d8d">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -137,7 +139,7 @@
 				<textFieldExpression><![CDATA[$F{populationDurationLabel}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="441" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="b7769323-dfc5-4d81-9a99-86d59a460875">
+				<reportElement x="401" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="b7769323-dfc5-4d81-9a99-86d59a460875">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -150,7 +152,7 @@
 				<textFieldExpression><![CDATA[$F{populationParticipantsLabel}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="501" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="602685d6-9690-4ccd-b055-b6563ef1ebb1">
+				<reportElement x="461" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="602685d6-9690-4ccd-b055-b6563ef1ebb1">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -163,7 +165,7 @@
 				<textFieldExpression><![CDATA[$F{exposureAssessmentLabel}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="561" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="80a74250-3f38-43b8-97da-d18744674685">
+				<reportElement x="521" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="80a74250-3f38-43b8-97da-d18744674685">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -175,8 +177,21 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{resultExposureRangeLabel}]]></textFieldExpression>
 			</textField>
+            <textField textAdjust="StretchHeight">
+                <reportElement x="581" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="f994e1bb-5242-438d-8343-32722a772395">
+                    <property name="com.jaspersoft.studio.unit.height" value="px"/>
+                    <property name="local_mesure_unitx" value="pixel"/>
+                    <property name="com.jaspersoft.studio.unit.x" value="px"/>
+                    <property name="local_mesure_unitwidth" value="pixel"/>
+                    <property name="com.jaspersoft.studio.unit.width" value="px"/>
+                </reportElement>
+                <textElement>
+                    <font fontName="DejaVu Sans" size="8"/>
+                </textElement>
+                <textFieldExpression><![CDATA[$F{methodStatisticsLabel}]]></textFieldExpression>
+            </textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="621" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="f994e1bb-5242-438d-8343-32722a772395">
+				<reportElement x="641" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="f994e1bb-5242-438d-8343-32722a772395">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -189,7 +204,7 @@
 				<textFieldExpression><![CDATA[$F{methodConfoundersLabel}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="681" y="0" width="70" height="15" isPrintWhenDetailOverflows="true" uuid="807dfc2a-e2e1-4110-959c-b6f909c6f89a">
+				<reportElement x="701" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="807dfc2a-e2e1-4110-959c-b6f909c6f89a">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -202,7 +217,7 @@
 				<textFieldExpression><![CDATA[$F{resultEffectEstimateLabel}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="751" y="0" width="70" height="15" isPrintWhenDetailOverflows="true" uuid="fdb29cd4-5676-4b88-a4a1-0b9868e3e2d4">
+				<reportElement x="761" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="fdb29cd4-5676-4b88-a4a1-0b9868e3e2d4">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -231,7 +246,7 @@
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="0" y="0" width="50" height="15" isPrintWhenDetailOverflows="true" uuid="e28f7734-468a-4c0d-a90d-22a2547bba31">
+				<reportElement x="0" y="0" width="40" height="15" isPrintWhenDetailOverflows="true" uuid="e28f7734-468a-4c0d-a90d-22a2547bba31">
 					<property name="local_mesure_unitheight" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
@@ -241,7 +256,7 @@
 				<textFieldExpression><![CDATA[$F{number}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="53" y="0" width="67" height="15" isPrintWhenDetailOverflows="true" uuid="f109c53f-dfed-4291-bb9a-8af1494ba689">
+				<reportElement x="41" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="f109c53f-dfed-4291-bb9a-8af1494ba689">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -254,7 +269,7 @@
 				<textFieldExpression><![CDATA[$F{authorYear}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="120" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="2fb6b86a-bb18-46a9-a6ce-c091011d18a3">
+				<reportElement x="101" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="2fb6b86a-bb18-46a9-a6ce-c091011d18a3">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitwidth" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -265,7 +280,7 @@
 				<textFieldExpression><![CDATA[$F{populationPlace}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="180" y="0" width="81" height="15" isPrintWhenDetailOverflows="true" uuid="1d677349-f3f6-4124-987f-327a52dc2e3d">
+				<reportElement x="161" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="1d677349-f3f6-4124-987f-327a52dc2e3d">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -278,7 +293,7 @@
 				<textFieldExpression><![CDATA[$F{methodOutcome}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="261" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="2667f9fe-7659-4ad8-b47f-e2fb1a4f0816">
+				<reportElement x="221" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="2667f9fe-7659-4ad8-b47f-e2fb1a4f0816">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -291,7 +306,7 @@
 				<textFieldExpression><![CDATA[$F{exposurePollutant}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="321" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="cb7c28b8-7666-485a-8f24-5706ee242dbd">
+				<reportElement x="281" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="cb7c28b8-7666-485a-8f24-5706ee242dbd">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -304,7 +319,7 @@
 				<textFieldExpression><![CDATA[$F{methodStudyDesign}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="381" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="14533bb7-088a-4fd6-bd08-8a4e4a4ae60a">
+				<reportElement x="341" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="14533bb7-088a-4fd6-bd08-8a4e4a4ae60a">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -317,7 +332,7 @@
 				<textFieldExpression><![CDATA[$F{populationDuration}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="441" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="e26a1bdb-f576-4130-95ec-0cff35976006">
+				<reportElement x="401" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="e26a1bdb-f576-4130-95ec-0cff35976006">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -330,7 +345,7 @@
 				<textFieldExpression><![CDATA[$F{populationParticipants}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="501" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="e984c0a4-edad-42ae-bc42-d5ae493e8706">
+				<reportElement x="461" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="e984c0a4-edad-42ae-bc42-d5ae493e8706">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -343,7 +358,7 @@
 				<textFieldExpression><![CDATA[$F{exposureAssessment}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="561" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="10eeb179-7032-446f-86af-9c72d417d0c5">
+				<reportElement x="521" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="10eeb179-7032-446f-86af-9c72d417d0c5">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -355,8 +370,21 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{resultExposureRange}]]></textFieldExpression>
 			</textField>
+            <textField textAdjust="StretchHeight">
+                <reportElement x="581" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="04f82aef-83d4-4539-99e6-005be1504bff">
+                    <property name="com.jaspersoft.studio.unit.height" value="px"/>
+                    <property name="local_mesure_unitx" value="pixel"/>
+                    <property name="com.jaspersoft.studio.unit.x" value="px"/>
+                    <property name="local_mesure_unitwidth" value="pixel"/>
+                    <property name="com.jaspersoft.studio.unit.width" value="px"/>
+                </reportElement>
+                <textElement>
+                    <font fontName="DejaVu Sans" size="8"/>
+                </textElement>
+                <textFieldExpression><![CDATA[$F{methodStatistics}]]></textFieldExpression>
+            </textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="621" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="04f82aef-83d4-4539-99e6-005be1504bff">
+				<reportElement x="641" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="04f82aef-83d4-4539-99e6-005be1504bff">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -369,7 +397,7 @@
 				<textFieldExpression><![CDATA[$F{methodConfounders}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="681" y="0" width="70" height="15" isPrintWhenDetailOverflows="true" uuid="46e5dd70-0862-479a-91d5-8dfffdf71eab">
+				<reportElement x="701" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="46e5dd70-0862-479a-91d5-8dfffdf71eab">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -382,7 +410,7 @@
 				<textFieldExpression><![CDATA[$F{resultEffectEstimate}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="751" y="0" width="70" height="15" isPrintWhenDetailOverflows="true" uuid="7384afbb-498e-405e-aa6c-7fe39bda8cc4">
+				<reportElement x="761" y="0" width="60" height="15" isPrintWhenDetailOverflows="true" uuid="7384afbb-498e-405e-aa6c-7fe39bda8cc4">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
